new run of randomized algorithms. updated report; corrected some typos and other minor language issues.

--- a/src/Makefile
+++ b/src/Makefile
@@ -46,3 +46,6 @@ $(ASSIGNMENT1_2): $(LIBSTAT) $(ASSIGNMENT1_2).cpp
 
 clean: 
 	rm -f $(LIBSTAT) $(ASSIGNMENTS) unittests $(LIBDIR)/*.o
+
+rtables:
+	R CMD BATCH makeRunTimeTables.R
