added assignement2 code: 3 stepfunctions, 2 neigbhorhoods, respective evaluation script mods

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,8 +5,10 @@ LIBSTAT = $(LIBDIR)/libkpmp.a
 
 ASSIGNMENT1_1= assignment1_1
 ASSIGNMENT1_2= assignment1_2
+ASSIGNMENT2= assignment2
 
-ASSIGNMENTS= $(ASSIGNMENT1_1) $(ASSIGNMENT1_2)
+
+ASSIGNMENTS= $(ASSIGNMENT1_1) $(ASSIGNMENT1_2) $(ASSIGNMENT2)
 
 INC = $(LIBDIR)
 
@@ -22,7 +24,7 @@ all: runtests $(ASSIGNMENTS)
 release: all
 debug: all	
 
-$(LIBSTAT): $(LIBDIR)/kpmp_instance.o  $(LIBDIR)/kpmp_solution.o  $(LIBDIR)/kpmp_solution_writer.o  $(LIBDIR)/assignment_helpers.o  $(LIBDIR)/spine.o 
+$(LIBSTAT): $(LIBDIR)/kpmp_instance.o  $(LIBDIR)/kpmp_solution.o  $(LIBDIR)/kpmp_solution_writer.o  $(LIBDIR)/assignment_helpers.o  $(LIBDIR)/spine.o   $(LIBDIR)/neighborhood_1_edge_move.o  $(LIBDIR)/neighborhood_1_node_flip.o
 	ar rvs $(LIBSTAT) lib/*.o
 
 $(LIBDIR)/%.o : $(LIBDIR)/%.cpp $(LIBDIR)/%.h
@@ -41,6 +43,9 @@ $(ASSIGNMENT1_1): $(LIBSTAT) $(ASSIGNMENT1_1).cpp
 
 $(ASSIGNMENT1_2): $(LIBSTAT) $(ASSIGNMENT1_2).cpp
 	$(CXX) -o $(ASSIGNMENT1_2) -I $(INC) $(CXXFLAGS) $(ASSIGNMENT1_2).cpp $(LIBSTAT) -lboost_program_options
+
+$(ASSIGNMENT2): $(LIBSTAT) $(ASSIGNMENT2).cpp
+	$(CXX) -o $(ASSIGNMENT2) -I $(INC) $(CXXFLAGS) $(ASSIGNMENT2).cpp $(LIBSTAT) -lboost_program_options
 
 
 
