--- a/src/Makefile
+++ b/src/Makefile
@@ -7,9 +7,10 @@ ASSIGNMENT1_1= assignment1_1
 ASSIGNMENT1_2= assignment1_2
 ASSIGNMENT2= assignment2
 ASSIGNMENT3= assignment3
+ASSIGNMENT4= assignment4
 
 
-ASSIGNMENTS= $(ASSIGNMENT1_1) $(ASSIGNMENT1_2) $(ASSIGNMENT2) $(ASSIGNMENT3)
+ASSIGNMENTS= $(ASSIGNMENT1_1) $(ASSIGNMENT1_2) $(ASSIGNMENT2) $(ASSIGNMENT3) $(ASSIGNMENT4)
 
 
 INC = $(LIBDIR)
@@ -51,6 +52,9 @@ $(ASSIGNMENT2): $(LIBSTAT) $(ASSIGNMENT2).cpp
 
 $(ASSIGNMENT3): $(LIBSTAT) $(ASSIGNMENT3).cpp
 	$(CXX) -o $(ASSIGNMENT3) -I $(INC) $(CXXFLAGS) $(ASSIGNMENT3).cpp $(LIBSTAT) -lboost_program_options -lboost_timer
+
+$(ASSIGNMENT4): $(LIBSTAT) $(ASSIGNMENT4).cpp
+	$(CXX) -o $(ASSIGNMENT4) -I $(INC) $(CXXFLAGS) $(ASSIGNMENT4).cpp $(LIBSTAT) -lboost_program_options -lboost_timer
 
 
 clean: 
